styles/main-styles.css
/* ... */
@media only screen and (max-width: 50em){

    .boltabout-uxb-wrapper{
        margin: -7vh auto 10vh;
        grid-template-rows: 33em auto;
    }

    .boltabout-uxb-haze{
        grid-column: 1/-1;
        transform: scale(1.5) translateX(2em);
        width: auto;
        height: 25em;
        margin-bottom: -10em
    }

    .boltabout-uxb-image{
        transform: scale(1.5) translateX(4em) translateY(1em);
        transform-origin: top;
        grid-column: 1/-1;
        width: auto;
        height: 50vh;
        min-height: 25em;
        max-height: 30em;
        margin: 5em auto 2em;
    }

    .boltabout-uxb-text{
        padding: 3em 2em 0;
        grid-column: 1/-1;
        grid-row: 2;
        margin: 0;
        max-width: none;
        background: linear-gradient(0deg, var(--bg-layer-base) 0%, var(--bg-layer-base) 80%, rgba(33,32,36,.9) 90%, rgba(33,32,36,.6) 95%, rgba(33,32,36,0.3) 98%, rgba(33,32,36,0) 100%);
    }

    .boltabout-uxb-wrapper:hover .boltabout-uxb-haze{
        transform: scale(1.5) translateX(2em);
    }
    
    .boltabout-uxb-wrapper:hover .boltabout-uxb-image{
        transform: scale(1.5) translateX(4em) translateY(1em);
    }

    .boltabout-uxb-wrapper:hover .boltabout-uxb-text{
        transform: translateX(0);
    }
}

/*--------------*/

.cp-uxb-wrapper{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
    margin: 21vh auto 10vh;
    max-width: 100em;
    max-height: 100em;
    min-height: 40em;
    column-gap: 5%;
}

.cp-uxb-haze{
    align-self: center;
    grid-column: 1/3;
    grid-row: 1;
    width: 30em;
    height: 30em;
    background: radial-gradient(ellipse closest-side, rgb(21, 71, 52) 0%, rgba(21,71,52,0.10) 90%, rgba(21,71,52,0) 100%);
    transform: scale(1.8) translateX(2.5em) translateY(-2em);
    opacity: 1;
    transition: ease 1s;
}

.cp-uxb-image{
    grid-row: 1;
    grid-column: 1/3;
    transform: scale(1.1);
    transform-origin: center;
    transition: ease 1s;
}

.cp-uxb-text{
    grid-column: 3/5;
    grid-row: 1;
    margin-right: 4em;
    align-self: center;
    z-index: 1;
    max-width: 40em;
    transition: ease 1s;
}

.cp-uxb-wrapper:hover .cp-uxb-haze{
    transform: scale(2.3) translateX(3em) translateY(-2em);
}

.cp-uxb-wrapper:hover .cp-uxb-image{
    transform: scale(1.1) translateX(.3em);
}

.cp-uxb-wrapper:hover .cp-uxb-text{
    transform: translateX(-.3em);
}

@media only screen and (max-width: 70em){

    .cp-uxb-wrapper{
        column-gap: 0;
    }
    
    .cp-uxb-haze{
        transform: scale(1.5) translateX(-4em) translateY(-2em);
    }
    
    .cp-uxb-image{
        transform: scale(1.1) translateX(-2em);
    }
    
    .cp-uxb-text{
        margin-right: 3em;
    }

    .cp-uxb-wrapper:hover .cp-uxb-haze{
        transform: scale(1.5) translateX(-4em) translateY(-2em);
    }

    .cp-uxb-wrapper:hover .cp-uxb-image{
        transform: scale(1.1) translateX(-2em);
    }

    .cp-uxb-wrapper:hover .cp-uxb-text{
        transform: translateX(0);
    }
}

@media only screen and (max-width: 50em){

    .cp-uxb-wrapper{
        margin: -7vh auto 10vh;
        grid-template-rows: 32em auto;
    }
    
    .cp-uxb-haze{
        grid-column: 1/-1;
        transform: scale(1.3) translateX(-1em);
        width: auto;
        height: 25em;
        margin-bottom: -10em
    }

    .cp-uxb-image{
        transform: scale(1.4) translateX(-1em);
        transform-origin: top;
        grid-column: 1/-1;
        width: auto;
        height: 60vh;
        min-height: 25em;
        max-height: 30em;
        margin: 5em auto -5em;
    }

    .cp-uxb-text{
        padding: 3em 2em 0;
        grid-column: 1/-1;
        grid-row: 2;
        margin: 0;
        max-width: none;
        background: linear-gradient(0deg, rgba(33,32,36,0) 0%, rgba(33,32,36,1) 20%, var(--bg-layer-base) 80%, rgba(33,32,36,.9) 90%, rgba(33,32,36,.6) 95%, rgba(33,32,36,0.3) 98%, rgba(33,32,36,0) 100%);
    }

    .cp-uxb-wrapper:hover .cp-uxb-haze{
        transform: scale(1.3) translateX(-1em);
    }
    
    .cp-uxb-wrapper:hover .cp-uxb-image{
        transform: scale(1.4) translateX(-1em);
    }

    .cp-uxb-wrapper:hover .cp-uxb-text{
        transform: translateX(0);
    }
}

/*--------------------CAROUSEL-----------------------*/

.carousel-wapper{
    position: relative;
    max-width: 1300px;
    margin: 0 auto;
    /* padding: 0 100px; */
    z-index: 99;
}

.carousel-fadeout{
    pointer-events: none;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: rgb(33,32,36);
    background: linear-gradient(90deg, rgba(33,32,36,1) 0%, rgba(33,32,36,0.797097504323481) 5%, rgba(33,32,36,0) 10%, rgba(33,32,36,0) 90%, rgba(33,32,36,0.8032894547878773) 95%, rgba(33,32,36,1) 100%);
}

.carousel{
    z-index: 0;
    display: flex;
    gap: 2em;
    padding: 0 100px;
    overflow-x: scroll;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.carousel::-webkit-scrollbar {
    display: none;
}

.project-tile{
    background-color: var(--bg-layer-top);
    padding: 20px;
    text-align: center;
    min-width: 250px;
    min-height: 400px;
    border-radius: .4em;
}

.project-tile:hover{
    cursor: pointer;
}

/*--------------------ART-----------------------*/

.art-wrapper{
    display: grid;
    grid-gap: 5px;
    background-color: #F8F8F8;
}

.art-wrapper img{
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Try using nth child here */

.side-by-side{
    display: grid;
    grid-template-columns: auto auto;
    grid-column-gap: 5px;
}

.side-by-side1{
    display: grid;
    grid-template-columns: 1.2fr 1fr;
    grid-column-gap: 5px;
}

.side-by-side2{
    display: grid;
    grid-template-columns: 1.15fr 1fr;
    grid-column-gap: 5px;
}

.side-by-side3{
    display: grid;
    grid-template-columns: 3fr 0fr;
    grid-column-gap: 5px;
}
/* ... */

